--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE.html>
 <html>
   <head>
+    <link rel="stylesheet" href="style.css" />
     <title>My Portfolio (T0076295J)</title>
   </head>
   <body>
