--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </p>
   <h2>Projects</h2>
   <p>
-  I am participating in <a href="https://developers.google.com/open-source/gci/">Google Code-in</a> with <a href="fossasia.org"></a>
+  I am participating in <a href="https://developers.google.com/open-source/gci/">Google Code-in</a> with <a href="fossasia.org">FOSSASIA.</a>
   </p> 
   </body>
 <html>
