--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   </head>
   <body>
   <h1>Alex</h1>
+    <img src="photo.jpg" />
   <h2>About</h2>
   <p>I am 16 years old, from <a href="https://www.dunmanhigh.moe.edu.sg">Dunman High School Singapore</a>
   </p>
