--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
   <h1>Alex</h1>
-    <img src="https://mail.google.com/mail/u/0/?ui=2&ik=16345c624c&view=fimg&th=1596795d08e87214&attid=0.1&disp=inline&realattid=1555564158386176000-local0&safe=1&attbid=ANGjdJ-sEZFoETYPteGe-9gll9ymMEZW-l4J4aAFPIP1pVDu55i4nMF18rDO42CDZCIT4Isc3-MnRFogRaT6Ws9v15TWKMAPvzmy6dZawTcdDQJS4Ymyndg_pZpcQH8&ats=1483501595781&rm=1596795d08e87214&zw&sz=w1366-h613" />
+    <img src="https://postimg.org/image/pz6p8s6rb/cfa6fce6/#.WGxxp3w0F8c.gmail" />
   <h2>About</h2>
   <p>I am 16 years old, from <a href="https://www.dunmanhigh.moe.edu.sg">Dunman High School Singapore</a>
   </p>
