--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
   <h1>Alex</h1>
-    <img src="https://postimg.org/image/pz6p8s6rb/" />
+    <img src="https://postimg.org/image/pz6p8s6rb/" >
   <h2>About</h2>
   <p>I am 16 years old, from <a href="https://www.dunmanhigh.moe.edu.sg">Dunman High School Singapore</a>
   </p>
