--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
   <h1>Alex</h1>
-    <img src="https://postimg.org/image/pz6p8s6rb/" alt="HTML5 Icon" width="128" height="128">
+    <img src="https://s23.postimg.org/ldal0fl8b/IMG_20160517_100749.jpg" alt="HTML5 Icon" width="128" height="128">
   <h2>About</h2>
   <p>I am 16 years old, from <a href="https://www.dunmanhigh.moe.edu.sg">Dunman High School Singapore</a>
   </p>
